<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coffee"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:height="60dp"
            android:hint="@string/enter_name"
            android:inputType="textCapWords"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <TextView
            style="@style/TextStyle"
            android:text="@string/selection"
            android:textAllCaps="true"
            android:textColor="#FFFFFF" />

        <RadioGroup
            android:id="@+id/radiogrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/cappuccino"
                style="@style/Radio"
                android:text="@string/cappuccino" />

            <RadioButton
                android:id="@+id/latte"
                style="@style/Radio"
                android:text="@string/latte" />

            <RadioButton
                android:id="@+id/filter_coffee"
                style="@style/Radio"
                android:text="@string/filter_coffee" />

        </RadioGroup>


        <TextView
            style="@style/TextStyle"
            android:text="@string/toppings"
            android:textAllCaps="true" />

        <CheckBox
            android:id="@+id/whipped_cream"
            style="@style/Check"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate"
            style="@style/Check"
            android:text="@string/chocolate"
            android:textSize="16sp" />


        <TextView
            style="@style/TextStyle"
            android:text="@string/quantity"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="0"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>

        <Button
            style="@style/Button"
            android:onClick="submitOrder"
            android:text="@string/order" />
    </LinearLayout>
</ScrollView>